# scout-annotation

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  README.md  add_callers_for_scout.py  annotate_scout_hg19_rd.sh  out_test.vcf  panels.py  parsers.py  pyproject.toml  rank_score_model_rd.ini  reformat_vcf_for_scout.py  requirements.dev.txt  requirements.txt  samples.py  scout-annotation.py  update_vcf.py
.github/: CODEOWNERS
.github/workflows/: conventional-prs.yml  linting.yml  release-please.yml
.test/: README.md  config.yaml  samples.tsv
.test/panels/: test_panel.tsv  test_panel2.tsv
config/: config.yaml  rare_disease_filter.yaml  somatic_filter.yaml
default_config/: config.yaml  genmod_rank_model.ini  rare_disease_filter.yaml  vcfanno_config.toml
panels/: ARVC.tsv  Brugada.tsv  FH.tsv  FTAAD.tsv  HCM_Stellan.tsv  LDS.tsv  LDS_Marfan.tsv  Vaskular_EDS.tsv  breast-cancer-somatic.tsv
scout_annotation/: __main__.py  panels.py  parsers.py  path.py  pipeline_definition.py  pipeline_utils.py  resources.py  samples.py  utils.py
scout_annotation/cli/: auto.py  batch.py  cli.py  download.py  panels.py  single.py  trio.py
scout_annotation/default_config/: config.yaml  resources.yaml  somatic_filter.yaml
scout_annotation/pipelines/: snakemake.yaml
scout_annotation/workflow/: Snakefile  Snakefile_download
tests/: cli_integration_test.py  integration_test.py  integration_test_cli.py  integration_test_snakemake.py  snakemake_integration_test.py  test_fix_vcf_af.py  test_madeline2.py  test_package_resources.py  test_pipeline_detection.py  test_rename_callers.py  test_undecompose.py  test_wildcardpath.py
tests/integration/: README.md  config.yaml  resources.yaml  samples.tsv  samples_no-filtering.tsv
workflow/: Snakefile
workflow/env/: genmod.yaml  most_severe_consequence.yaml  panel_filtering.yaml
workflow/rules/: annotate.smk  common.smk  coverage.smk  filtering.smk  misc.smk  normalise.smk  panel_filtering.smk  ped.smk  scout_load_config.smk
workflow/schema/: config.schema.yaml  resources.schema.yaml  samples.schema.yaml
workflow/scripts/: add_multi_snv_in_codon.py  fix_vcf_af.py  mock_ped.py  most_severe_consequence.py  panel_filtering.py  peddy.py  rename_callers.py  scout_load_config.py  undecompose_vcf.py
(+60 files in other folders)
