[project]
name = "scout-annotation"
version = "0.8.0"
description = "Snakemake pipeline with utilities for annotating VCFs for loading into Scout"
authors = [
    {name = "Niklas Mähler", email = "niklas.mahler@gmail.com"},
]
license = "GPL-3.0-or-later"
readme = "README.md"
dependencies = [
    "snakemake~=9.14",
    "snakemake-executor-plugin-slurm~=2.1",
]
requires-python = "~=3.12.0"

[dependency-groups]
dev = [
    "black ~=25.11.0",
    "pre-commit ~=4.5.0",
    "pytest ~=9.0",
    "pysam>=0.23.3",
]

[tool.setuptools]
packages = []
